Closed Bug 241591 Opened 21 years ago Closed 21 years ago

Leak in seamonkey profile manager if you tab through elements

Categories

(Core :: XUL, defect, P1)

x86
Windows 2000
defect

Tracking

()

RESOLVED FIXED
mozilla1.7final

People

(Reporter: benjamin, Assigned: dbaron)

References

Details

(Keywords: fixed1.7, memory-leak, Whiteboard: [patch])

Attachments

(1 file)

This was really elusive, but it's a real leak that cause us hanging onto the RDF service and the pref service: If you launch seamonkey and it shows the profile manager, and you click "Start", there's no leak. However, if it shows the profile manager, and you tab around a bit to the "start" button and hit "Enter", we leak an nsXULElement and a document, and therefore hang onto the rdfservice and prefservice. Steps to reproduce: ./mozilla -profilemanager tab to "Start" (or even "Cancel") hit "Enter" look at trace-refcnt leaks or trace-malloc stats for leaked objects I'm sorry to say I don't know how to debug this further
Attachment #146956 - Flags: superreview?(bryner)
Attachment #146956 - Flags: review?(bryner)
Assignee: nobody → dbaron
Keywords: mlk
Priority: -- → P1
Target Milestone: --- → mozilla1.7final
Attachment #146956 - Flags: superreview?(bryner)
Attachment #146956 - Flags: superreview+
Attachment #146956 - Flags: review?(bryner)
Attachment #146956 - Flags: review+
Fix checked in to trunk, 2004-04-26 16:19 -0700.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment on attachment 146956 [details] [diff] [review] patch simple fix for a rather serious leak (we leak content nodes on all key and IME events)
Attachment #146956 - Flags: approval1.7?
Attachment #146956 - Flags: approval1.7? → approval1.7+
Fix checked in to MOZILLA_1_7_BRANCH, 2004-04-26 21:41 -0700.
Keywords: fixed1.7
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: