Fix leak of content on all key and IME events.  b=241591  r+sr=bryner